had to work around some backbone issues where recycling a document does not redo global page backdrop and also made banner more visible under different colors

--- a/css/layoutengine.css
+++ b/css/layoutengine.css
@@ -21,7 +21,7 @@ h1 {
   letter-spacing: 4px;
   margin: 4px;
   font-size: 300%;
-  text-shadow: 0px 1px 2px #ddd;
+  text-shadow: 2px 3px 4px #888;
 }
 
 h2 {
@@ -31,7 +31,7 @@ h2 {
   letter-spacing: 4px;
   margin: 4px;
   font-size: 200%;
-  text-shadow: 0px 1px 2px #ddd;
+  text-shadow: 2px 3px 4px #888;
 }
 
 h3 {
@@ -41,7 +41,11 @@ h3 {
   letter-spacing: 4px;
   margin: 4px;
   font-size: 100%;
-  text-shadow: 0px 1px 2px #ddd;
+  text-shadow: 2px 3px 4px #888;
+}
+
+.banner {
+    background: rgba(0,100,150,0.8);
 }
 
 .page {
@@ -104,10 +108,12 @@ h3 {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   margin:0px;
-  width:98%;
+  width:100%;
   padding:2%;
   padding-right:0px; /* lovely that it is 2015 and browsers can't even center text with padding thanks tbl */
   display: block;
+  background-color:white;
+  opacity: 0.7;
 }
 
 a {
